Fixed wrapping issue of language switcher on Georgian page.

--- a/_sass/components/_main-nav.scss
+++ b/_sass/components/_main-nav.scss
@@ -50,3 +50,7 @@
         padding-bottom: 0.8rem;
       }
     }
+
+    .main-nav-list-item.mod-language-switcher {
+      min-width: 3rem;
+    }
